tests/fixtures/errors/private_in_public.gcl
// Error: pub node references private dim in its signature (V003).
//
// `velocity_of` is private, so its name is not visible across the
// include boundary. `pub node speed` names it → V003.
dim Velocity = Length / Time;
pub dim Speed = Length / Time;
const node velocity_of: Velocity = 10.0 m/s;
pub node speed: Velocity = @velocity_of;
